1.21 Update Init